updating index.html

--- a/index.html
+++ b/index.html
@@ -1,12 +1,89 @@
 <!DOCTYPE html>
-<html>
-<head>
-<title>Hello World Azure Template</title>
-</head>
+<html lang="en">
+<link rel="stylesheet" href="mystyle.css">
+<title>Logan Edwards Resume</title>
 <body>
-<h1>Azure Static Website Template</h1>
-<p>This page is a sample page for a “Hello World” Azure Static Website Template. The page contains an HTML validation warning. 
-Can you find and fix that warning? What about the curly quotes? Do they current work in all browsers? Can you fix the curly 
-quotes also? And what about proper indenting?</p>
+
+    <h1 class="midBold">LOGAN M. EDWARDS</h1>
+    <hr class="topLine">
+    <p style="text-align: center;">
+        Plainfield, IL
+        <a href="https://github.com/LoganEdwards">https://github.com/LoganEdwards</a>
+        815.341.8596
+        <a href="mailto:Loganmedwards@lewisu.edu">loganmedwards@lewisu.edu</a>
+    </p>
+    <hr class="topLine">
+    <p class="bold">HIGHLIGHTS OF QUALIFICATIONS</p>
+    <ul>
+        <li>Leadership, communication skills as a student athlete in highshcool</li>
+        <li>Teamwork skills from working as a team in sports, and working at Sam's club</li>
+        <li>Familiar with computer hardware, built and fixed a few computers</li>
+        <li>Solid skills in Java and Python, also learning JavaScript, HTML, and CSS</li>
+    </ul>
+    <p class="bold">SUMMARY OF TECHNICAL QUALIFICATIONS</p>
+    <hr class="topLine">
+
+    <p class="boldItalic">LANGUAGES:</p>
+    <ul><li>Java, Python, JavaScript, HTML, CSS</li></ul>
+    <p class="boldItalic">APPLICATIONS:</p>
+    <ul><li>All Microsoft and Google applications, ie. sheets/excel, word, powerpoint etc.</li></ul>
+    <p class="bold">EDUCATION</p>
+    <hr class="topLine">
+
+    <p>
+        <div style="float: right;">
+            Expected: May 2025 <br>GPA: 3.62/4.0
+        </div>
+        <div style="float: left">
+        Bachelor of Science in Computer Science<br>Lewis University, Romeoville, IL
+        </div>
+    </p>
+    <p class="bold" style="text-align: left;"><br><br><br>EXPERIENCE</p>
+    <hr class="topLine">
+    <p>
+        <div style="float: right;">
+        June 2022 - September 2022
+        </div>
+        <div class="bold" style="float: left">
+        Sam's Club, Club Pickup
+        </div>
+        <div style="text-align: left;"><br>Sam's Club, Joliet IL
+        </div>
+        <ul>
+            <li>Find and organize all items on the online orders</li>
+            <li>Work as a team to deliver the orders to each customer in small time frame</li>
+        </ul>
+    </p>
+    <p>
+        <div style="float: right;">
+        June 2017 - September 2018
+        </div>
+        <div class="bold" style="float: left">
+        PSA Soccer Referee
+        </div>
+        <div style="text-align: left;"><br>Plainfield Soccer Association, Plainfield IL
+        </div>
+        <ul>
+            <li>Developed strong communication skills while working with coaches and players</li>
+            <li>Strengthened ability to work under pressure and on the fly</li>
+            <li>Aquired leardership skills to be able to control the players and the game</li>
+        </ul>
+    </p>
+
+    <p class="bold" style="text-align: left;">HONORS AND AWARDS</p>
+    <hr class="topLine">
+    <ul>
+        <li>Honor Roll, Plainfield South High School, six semesters</li>
+        <li>High Honor Roll, Plainfield South High School, two semesters</li>
+    </ul>
+
+    <p class="bold" style="text-align: left;">LEADERSHIP, ACTIVITIES AND VOLUNTEER EXPERIENCE</p>
+    <hr class="topLine">
+    <ul>
+        <li>Member, Plainfield South Soccer Team, 2018 - 2020</li>
+        <li>Member, Lewis University Esports Team, 2022 - Present</li>
+        <li>Volunteer, St. John Lutheran Church Food Drive, every winter 2014 - 2020</li>
+    </ul>
+
 </body>
 </html>
