Updating index.html

--- a/index.html
+++ b/index.html
@@ -31,44 +31,46 @@
     <hr class="topLine">
 
     <p>
-        <div style="float: right;">
+        <span style="float: right;">
             Expected: May 2025 <br>GPA: 3.62/4.0
-        </div>
-        <div style="float: left">
+        </span>
+        <span style="float: left">
         Bachelor of Science in Computer Science<br>Lewis University, Romeoville, IL
-        </div>
+        </span>
     </p>
     <p class="bold" style="text-align: left;"><br><br><br>EXPERIENCE</p>
     <hr class="topLine">
     <p>
-        <div style="float: right;">
+        <span style="float: right;">
         June 2022 - September 2022
-        </div>
-        <div class="bold" style="float: left">
+        </span>
+        <span class="bold" style="float: left">
         Sam's Club, Club Pickup
-        </div>
-        <div style="text-align: left;"><br>Sam's Club, Joliet IL
-        </div>
+        </span>
+        <span style="text-align: left;"><br>Sam's Club, Joliet IL
+        </span>
+    </p>
         <ul>
             <li>Find and organize all items on the online orders</li>
             <li>Work as a team to deliver the orders to each customer in small time frame</li>
         </ul>
-    </p>
+    
     <p>
-        <div style="float: right;">
+        <span style="float: right;">
         June 2017 - September 2018
-        </div>
-        <div class="bold" style="float: left">
+        </span>
+        <span class="bold" style="float: left">
         PSA Soccer Referee
-        </div>
-        <div style="text-align: left;"><br>Plainfield Soccer Association, Plainfield IL
-        </div>
+        </span>
+        <span style="text-align: left;"><br>Plainfield Soccer Association, Plainfield IL
+        </span>
+    </p>
         <ul>
             <li>Developed strong communication skills while working with coaches and players</li>
             <li>Strengthened ability to work under pressure and on the fly</li>
             <li>Aquired leardership skills to be able to control the players and the game</li>
         </ul>
-    </p>
+    
 
     <p class="bold" style="text-align: left;">HONORS AND AWARDS</p>
     <hr class="topLine">
