Updating index.html

--- a/index.html
+++ b/index.html
@@ -86,6 +86,6 @@
         <li>Member, Lewis University Esports Team, 2022 - Present</li>
         <li>Volunteer, St. John Lutheran Church Food Drive, every winter 2014 - 2020</li>
     </ul>
-
+    <p><a href="Logan Edwards Resume.pdf">Link to pdf version</a></p>
 </body>
 </html>
