--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <hr class="topLine">
     <p class="bold">HIGHLIGHTS OF QUALIFICATIONS</p>
     <ul>
-        <li>Leadership, communication skills as a student athlete in highscool</li>
+        <li>Leadership, communication skills as a student athlete in highschool</li>
         <li>Teamwork skills from working as a team in sports, and working at Sam's club</li>
         <li>Familiar with computer hardware, built and fixed a few computers</li>
         <li>Solid skills in Java and Python, also learning JavaScript, HTML, and CSS</li>
